# Zora

./: Cargo.toml  test.sh
src/: config.rs  main.rs
src/commands/: add.rs  bench.rs  build.rs  cache.rs  check.rs  clean.rs  completions.rs  deps.rs  doc.rs  expand.rs  features.rs  fmt.rs  info.rs  init.rs  install.rs  lint.rs  mod.rs  new.rs  new_project.rs  package.rs  publish.rs  remove.rs  run.rs  script.rs  search.rs  test.rs  tree.rs  uninstall.rs  update.rs  verify.rs  version.rs  watch.rs  workspace.rs
testing/: project.toml
testing/.build/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json
testing/src/: main.c
